packages/preview/typsidian/0.0.2/README.md
# Typsidian

Obsidian-inspired Typst template for note taking, outlines, and knowledge management.

![Typsidian](./assets/template.png)

_Left: `theme: "dark"`, Right: `theme: "light"`_

## Usage

```typst
#import "@preview/typsidian:0.0.1": *
#show: typsidian.with(
  theme: "light",
  title: "My Document",
  course: "CS4999",
  show-index: true,
  index-entry-list: (
    (
      key: "example",
      short: "An example index entry"
    ),
  )
)
```

### Options

- `title` - Document title
- `author` - Document author
- `course` - Course name or subtitle
- `text-args` - Text arguments for main and mono text styles
  - `main` - Main text style
    - `font` - Font family (default: "Inter 24pt")
    - `weight` - Font weight (default: "regular")
    - `size` - Font size (default: 10pt)
  - `mono` - Monospaced text style
    - `font` - Font family (default: "GeistMono NFP")
    - `weight` - Font weight (default: "regular")
    - `size` - Font size (default: 1.1em)
- `show-index` - Whether to show the [index](https://typst.app/universe/package/glossarium/) (default: false)
- `index-entry-list` - List of index entries (default: empty array)
- `theme` - Theme, either "light" or "dark" (default: "light")
- `show-heading-colors` - Whether to show heading colors (default: true)
- `show-bold-color` - Whether to show bold text color (default: true)
- `show-italic-color` - Whether to show italic text color (default: true)
- `standalone` - True for standalone documents, false for use with my [Typst for Obsidian plugin](https://github.com/k0src/Typst-for-Obsidian)

### Functions

- `make-title(show-outline: true, show-underline: true, centered: true)`:
  - Generates the title page.
  - `show-outline` - Whether to show the outline around the title box (default: true)
  - `show-underline` - Whether to show the underline below the title (default: true)
  - `centered` - Whether to center the title box vertically on the page (default: true)
- `box(theme: "basic", title: none, breakable: false, body, box-radius: 0.25em)`:
  - Creates a styled box.
  - `theme` - Box theme: `info`, `important`, `example`, `aside`, `frame`, `theorem` or `basic` (default: `basic`)
  - `title` - Optional title for the box (default: none)
  - `breakable` - Whether the box can break across pages (default: false)
  - `body` - Box content
  - `box-radius` - Border radius for the box (default: 0.25em)

### With Typst for Obsidian Plugin

1. Install the [Typst for Obsidian plugin](https://github.com/k0src/Typst-for-Obsidian)
2. Create a new Typst file in Obsidian and import the template with desired options:

```typst
#import "@local/typsidian:0.0.1": *
#show: typsidian.with(
  theme: "dark",
  title: "My Document",
  course: "CS4999",
  standalone: false
)
```

4. Use `#make-title(show-outline: true)` to generate the title page.
5. Write your document content below the title.

> [!NOTE]
> When using with the Typst for Obsidian plugin, set `standalone: false`, using the default layout functions for best results.

## Dependencies

### Fonts

- [Inter 24pt](https://fonts.google.com/specimen/Inter)
- [GeistMono NFP](https://github.com/ryanoasis/nerd-fonts/releases/)
- [Fira Math](https://github.com/firamath/firamath/releases/)

### Packages

- [zebraw](https://typst.app/universe/package/zebraw)
- [itemize](https://typst.app/universe/package/itemize)
- [showybox](https://typst.app/universe/package/showybox)
- [glossarium](https://typst.app/universe/package/glossarium/)
- [fontawesome](https://typst.app/universe/package/fontawesome)

## License

[MIT License](./LICENSE)
